Adds conclusion and discussion of future scope.

--- a/capstone_lending_club/3_combining_classifiers.ipynb
+++ b/capstone_lending_club/3_combining_classifiers.ipynb
@@ -7,12 +7,12 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Performance-comparison\" data-toc-modified-id=\"Performance-comparison-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Performance comparison</a></span></li><li><span><a href=\"#Ensemble\" data-toc-modified-id=\"Ensemble-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Ensemble</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Performance-comparison\" data-toc-modified-id=\"Performance-comparison-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Performance comparison</a></span></li><li><span><a href=\"#Ensemble\" data-toc-modified-id=\"Ensemble-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Ensemble</a></span></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Conclusion</a></span></li><li><span><a href=\"#Future-Scope\" data-toc-modified-id=\"Future-Scope-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Future Scope</a></span></li></ul></div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,30 +32,12 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.cm as cm\n",
     "import seaborn as sns\n",
-    " \n",
-    "# from sklearn.compose import ColumnTransformer\n",
-    "# from sklearn.pipeline import Pipeline\n",
-    "# from sklearn.impute import SimpleImputer\n",
-    "# from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "# from sklearn.model_selection import train_test_split, \\\n",
-    "#     StratifiedShuffleSplit, cross_val_score, StratifiedKFold, \\\n",
-    "#     GridSearchCV, RandomizedSearchCV\n",
-    "\n",
-    "# from sklearn.decomposition import PCA\n",
-    "# from sklearn.linear_model import LogisticRegression, \\\n",
-    "#     LogisticRegressionCV, SGDClassifier\n",
-    "# from sklearn.svm import SVC, LinearSVC\n",
-    "# from sklearn.ensemble import RandomForestClassifier, \\\n",
-    "#     ExtraTreesClassifier, VotingClassifier\n",
     "\n",
     "from sklearn.metrics import confusion_matrix, classification_report, \\\n",
     "    precision_recall_curve, average_precision_score, f1_score, \\\n",
     "    roc_curve, auc, roc_auc_score, make_scorer,\\\n",
     "    accuracy_score, balanced_accuracy_score\n",
-    "\n",
     "from sklearn.externals import joblib\n",
-    "# from sklearn.utils import resample\n",
-    "# from sklearn.utils.fixes import signature\n",
     "\n",
     "# Set up pandas table display\n",
     "pd.set_option('display.width', 120)\n",
@@ -64,13 +46,7 @@
     "\n",
     "# Set plotting options\n",
     "sns.set() # Use seaborn defaults for plotting\n",
-    "%matplotlib inline \n",
-    "\n",
-    "# # Load line profiler\n",
-    "# %load_ext line_profiler\n",
-    "\n",
-    "# Adjust number of CPU cores to use\n",
-    "# n_jobs=2"
+    "%matplotlib inline "
    ]
   },
   {
@@ -181,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +232,7 @@
     "\n",
     "While one could develop an even more sophisticated weighting, deciding on how to compute the exact weights is challenging because these need to take into account not only a model's relative performance, but also the correlation of its predictions with other models.  Thus, I will go with the simpler solution describe above for now.\n",
     "\n",
-    "Scikit-learn implements a voting classifier, but I could not use it. The primary reason is that I used XGBoost's native API rather than the Scikit-learn API (since this allowed us to use a more optimized data format, amongst other). Since scikit-learn's voting classifier takes instances of the individual models as its arguments, I would not be possible to include XGBoost in the ensemble. \n",
+    "Scikit-learn implements a voting classifier, but it wasn't possible to use it here. The reason is that I relied on XGBoost's native API rather than the Scikit-learn API (since this allowed us to use a more optimized data format, amongst other). Since scikit-learn's voting classifier takes instances of the individual models as its arguments, I would not be possible to include XGBoost in the ensemble. \n",
     "\n",
     "However, implementing a hard voting classifier is straightforward. I start by taking the (weighted) average of the predictions for each test set observation. As explained above, we will double the weight of XGBoost."
    ]
@@ -426,6 +402,35 @@
     "This shows that the ensemble performs very similar to XGBoost. Both achieve the same F1-score for identifying defaults (0.44) and non-defaults (0.83). When we take a more detailed look, we see that XGBoost performs slightly better on some measures (recall on non-default). Therefore, we would probably go with its predictions for making loan decisions for now. \n",
     "\n",
     "Nevertheless, the results do show the power of ensembles: Even though the other models - which performed considerably worse -  constituted 5/7 = 71% of the ensemble, the resulting accuracy is almost identical to XGBoost. By adding more different models, and by weighting the predictions in a more sophisticated way, we should be able to create an ensemble that surpasses the performance of the best individual model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "Let's now reflect on lessons from this analysis.  Remember that the ultimate goal was to maximize predictive accuracy.\n",
+    "\n",
+    "The first step to do so was to make sure that our data are clean, because this gets rid of noise that would otherwise increase the estimator's variance. This process also helped with getting to know the data better, which in turn allowed leveraging our domain knowledge to engineer better features. In particular, I normalized all monetary variables by dividing them by each applicant's income. While we don't know how much of a boost in accuracy each of these steps added, we do know that the new features I computed disproportionately ended up among the most important features.\n",
+    "\n",
+    "However, an important lesson was that doing a good job cleaning the data takes a lot of time, so we have to ask beforehand whether we are willing to pay that extra cost in order to get a small boost in accuracy. The best solution may be to start out doing only a minimum amount of cleaning, and then jump into predictive modeling to get results as quickly as possible. We can then decide whether we are willing to invest extra time in order to get incremental improvements.\n",
+    "\n",
+    "The same is true for feature engineering. It is worth pointing out that more sophisticated models such as XGBoost and random forests make less demands on the distribution of the data. For example, they are not affected by skewed distributions that are far from Gaussian. Since XGBoost ended up being the best performing model anyway, a quick first approach could limit feature engineering to a bare minimum to only address problems that these models are not able to deal with on their own (e.g., dividing the borrower's loan amount by their annual income, which drew on human domain knowledge).\n",
+    "\n",
+    "During the predictive modeling stage, it again took a lot of extra effort in order to get the last increase in accuracy. Firstly, I needed to resort to Bayesian hyperparameter optimization in order to be able to optimize more than two or three hyperparameters. This more advanced technique was thus not strictly necessary for logistic regression and SVMs, but it proved vital for XGBoost, which had a lot of hyperparameters to optimize. The best alternative probably would have been to perform a lazy search, i.e. to sequentially tune one or two hyperparameters at a time. Needless to say, this would have caused us to take a performance hit on our best-performing model.\n",
+    "A second step I took during the predictive modeling stage was to run some of the models on AWS, most importantly in order to train an SVM with RBF kernel. While this algorithm turned out to yield the second best performing model, it still did not come close to XGBoost.\n",
+    "Finally, I combined all models into an ensemble using a hard voting classifier (weighting the predictions of XGBoost by a factor of two due to its superior performance). While this ensemble performed better than the (weighted) average of their individual scores, its performance came very close but did not reach the performance of XGBoost. Thus, we would want to go with XGBoost rather than the ensemble for actual predictions.\n",
+    "\n",
+    "Overall, thus, a lot of extra effort was necessary in order to squeeze out the last bit of accuracy. On the other hand, as mentioned above, this is likely worth it for a problem such as this. In fact, a lending institution that is only slightly better at predicting its applicants’ default risk may derive such disproportionate results from this that it may be worth to keep fine-tuning the model even more.\n",
+    "\n",
+    "\n",
+    "## Future Scope\n",
+    "As hinted throughout the of the analysis, there are a number of additional steps we could take if you wanted to gain an additional increase in accuracy.  Most of these will be quite time-consuming, so they should only be taken if there are disproportionate gains from additional increases in accuracy.\n",
+    "\n",
+    "Firstly, we dropped categorical variables with more than 50 categories, because one-hot encoding of these would create too many features. A better alternative would be to either seek to create binary variables for only the most relevant or most common categories, or to extract a common meaning from different categories (e.g., use natural language processing for text fields).\n",
+    "Secondly, as we discussed at length above, it would be good to take the time-series nature (i.e. temporally correlated errors) into account. However, coming up with representative training- and test sets is a huge challenge.\n",
+    "Thirdly, we could train a deep learning model, which is likely to outperform all other models.\n",
+    "Finally, we could simply add more independent models to the ensemble, or use a more sophisticated way of combining the predictions of the individual models."
    ]
   }
  ],
